Fixed translations problems, added category and product updates
